--- a/game/package.json
+++ b/game/package.json
@@ -12,12 +12,13 @@
         "html-webpack-plugin": "4.0.4",
         "prettier": "2.0.4",
         "ts-loader": "6.2.2",
-        "typescript": "3.8.3",
+        "typescript": "^5.2.2",
         "webpack": "4.42.1",
         "webpack-cli": "3.3.11",
         "webpack-dev-server": "^3.10.3"
     },
     "dependencies": {
+        "axios": "^1.5.1",
         "pixi-viewport": "^4.33.0",
         "pixi.js": "5.2.1",
         "simplex-noise": "^3.0.0"
