--- a/game/tsconfig.json
+++ b/game/tsconfig.json
@@ -5,8 +5,7 @@
         "target": "es5",
         "module": "CommonJS",
         "sourceMap": true,
-        // Set your preferences here for TypeScript
-        "strict": true,
+        "strict": false,
         "downlevelIteration": true
     }
 }
