--- a/game/tsconfig.json
+++ b/game/tsconfig.json
@@ -5,7 +5,7 @@
         "target": "es5",
         "module": "CommonJS",
         "sourceMap": true,
-        "strict": false,
+        "strict": true,
         "downlevelIteration": true
     }
 }
