--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "debug": "nest start --debug --watch",
     "prod": "node dist/main",
     "pgupprod": "systemctl start docker && sudo /usr/local/bin/docker-compose up --force-recreate -d",
+    "pgdwprod": "sudo /usr/local/bin/docker-compose down",
     "pgup": "systemctl start docker && sudo docker-compose up --force-recreate -d",
     "pgdw": "sudo docker-compose down",
     "query": "psql postgresql://postgres:postgres@localhost:5432/postgres"
