prod setup eg ip requirements and pushing to external servers

--- a/game/package.json
+++ b/game/package.json
@@ -3,7 +3,7 @@
     "version": "0.4",
     "description": "PROJECTK",
     "scripts": {
-        "dev": "webpack-dev-server -d"
+        "dev": "webpack-dev-server -d --host 0.0.0.0"
     },
     "license": "MIT",
     "devDependencies": {
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "axios": "^1.5.1",
+        "dotenv": "^16.3.1",
         "pixi-viewport": "^4.33.0",
         "pixi.js": "5.2.1",
         "simplex-noise": "^3.0.0"
