--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,11 +2,8 @@
   "name": "social-optim-fe",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve --host 0.0.0.0",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "prod": "ng serve --host 0.0.0.0 --port 4200 --configuration=production",
+    "dev": "ng serve --host 0.0.0.0 --watch"
   },
   "private": true,
   "dependencies": {
@@ -19,6 +16,7 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
