--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -65,7 +65,13 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "social-optim-fe:build:production"
+              "browserTarget": "social-optim-fe:build:production",
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ]
             },
             "development": {
               "browserTarget": "social-optim-fe:build:development"
