--- a/game/package.json
+++ b/game/package.json
@@ -9,6 +9,7 @@
     "devDependencies": {
         "clean-webpack-plugin": "^3.0.0",
         "copy-webpack-plugin": "5.1.1",
+        "dotenv-webpack": "^8.0.1",
         "html-webpack-plugin": "4.0.4",
         "prettier": "2.0.4",
         "ts-loader": "6.2.2",
